--- a/package.json
+++ b/package.json
@@ -5,11 +5,45 @@
   "license": "Apache-2.0",
   "homepage": "https://github.com/stanleyxu2005/react-checkmark",
   "author": "Qian Xu (https://github.com/stanleyxu2005)",
-  "main": "src/checkmark.js",
+  "main": "dist/react-checkmark.min.js",
+  "scripts": {
+    "build:dev": "webpack --env=dev --progress --profile --colors",
+    "build:dist": "webpack --env=prod --progress --profile --colors",
+    "build": "npm run build:dist && npm run build:dev",
+    "watch": "webpack --env=prod --progress --watch",
+    "dev": "webpack-dev-server --env=dev",
+    "start": "concurrently --kill-others \"npm run watch\" \"npm run dev\""
+  },
+  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.16",
+    "concurrently": "^3.5.0",
+    "css-loader": "^0.28.4",
+    "eslint": "^1.6.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-react": "^7.1.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
+    "loglevel": "^1.4.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "style-loader": "^0.23.1",
+    "webpack": "^3.3.0",
+    "webpack-dev-server": "^2.6.0",
+    "webpack-merge": "^4.1.0"
+  },
+  "peerDependencies": {
+    "react": "^15.3.0",
+    "prop-types": "^15.3.0"
+  },
   "files": [
     "LICENSE",
     "package.json",
     "README.md",
-    "src"
+    "dist"
   ]
 }
