--- a/package.json
+++ b/package.json
@@ -15,30 +15,30 @@
     "start": "concurrently --kill-others \"npm run watch\" \"npm run dev\""
   },
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.5.0",
+    "@babel/preset-env": "^7.5.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^0.1.16",
     "concurrently": "^3.5.0",
     "css-loader": "^0.28.4",
-    "eslint": "^1.6.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-react": "^7.1.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "loglevel": "^1.4.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "style-loader": "^0.23.1",
-    "webpack": "^3.3.0",
-    "webpack-dev-server": "^2.6.0",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.1.0"
   },
   "peerDependencies": {
-    "react": "^15.3.0",
-    "prop-types": "^15.3.0"
+    "react": "^16.8.6",
+    "prop-types": "^15.7.2"
   },
   "files": [
     "LICENSE",
