--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-checkmark",
   "description": "Animated checkmark for React",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "license": "Apache-2.0",
   "homepage": "https://github.com/stanleyxu2005/react-checkmark",
-  "author": "Qian Xu (https://github.com/stanleyxu2005)",
+  "author": "Stanley Xu (https://github.com/stanleyxu2005)",
   "main": "dist/react-checkmark.min.js",
   "scripts": {
     "build:dev": "webpack --env=dev --progress --profile --colors",
