--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "build:dev": "webpack --env=dev --progress --profile --colors",
     "build:dist": "webpack --env=prod --progress --profile --colors",
     "build": "npm run build:dist && npm run build:dev",
-    "watch": "webpack --env=prod --progress --watch",
     "dev": "webpack-dev-server --env=dev",
-    "start": "concurrently --kill-others \"npm run watch\" \"npm run dev\""
+    "start": "npm run dev"
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
@@ -20,23 +19,19 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^0.1.16",
-    "concurrently": "^3.5.0",
     "css-loader": "^0.28.4",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "loglevel": "^1.4.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "prop-types": "^15.7.2",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.1.0"
-  },
-  "peerDependencies": {
-    "react": "^16.8.6",
-    "prop-types": "^15.7.2"
   },
   "files": [
     "LICENSE",
