--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "dev": "webpack-dev-server --env=dev",
     "start": "npm run dev"
   },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.5.0",
     "@babel/preset-env": "^7.5.0",
@@ -22,9 +26,6 @@
     "css-loader": "^0.28.4",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^4.5.2",
-    "loglevel": "^1.4.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.35.2",
